2014-06-05  eig  <eig114@gmail.com>

	* Main.cs: Упорядочивание вывода по шансу совпадения

	* ProfileExtensions.cs: Правки по вычислениям. Функции от
	  нескольких профилей теперь возвращают шанс того, что данный
	  профиль - автор.

	* Profile.cs: 

2014-05-29  eig  <eig114@gmail.com>

	* NGrams.pidb: 

	* Profile.cs: * Функция GetHashCode()

	* ProfileExtensions.cs: + Ненормированные расстояния

	* Main.cs: * Мелкие правки

2014-05-29  eig  <eig114@gmail.com>

	* Main.cs:
	* README.md: 

2014-05-29  eig  <eig114@gmail.com>

	* ProfileExtensions.cs: Перенос и расширение функционала
	  класса Profiler. 

	* Settings.StyleCop: Настройки от StyleCop

	* Main.cs:
	* NGrams.pidb:
	* NGrams.csproj: 

	* Profile.cs: Поле с именем автора. Метод Equals

	* Profiler.cs: Удалил Profiler. Весь функционал перенесен в
	  ProfileExtensions

2014-05-03  eig  <eig114@gmail.com>

	* Profile.cs: Расширение NgramGetter. Профилирует автора по
	  нескольким файлам

	* Main.cs:
	* NGrams.csproj: 

	* NgramGetter.cs: Удаление за ненаадобностью. Перенос
	  функционала в класс Profile

2014-05-03  eig  <eig114@gmail.com>

	* Main.cs:
	* Profiler.cs:
	* NGrams.pidb:
	* NGrams.csproj:
	* NgramGetter.cs: 

2014-03-17  eig  <eig114@gmail.com>

	* IDictionaryExtensions.cs: 

	* Main.cs: Небольшие исправление в выводе

	* NgramGetter.cs: Исправление алгоритма чтения Н-грам

	* Profiler.cs: Обьединение данных с нескольких файлов

2014-03-14  eig  <eig114@gmail.com>

	* Main.cs: Исправление вылета при указании двух одинаковых
	  имен файла

	* README.md: Добавкление описания

2014-03-14  eig  <eig114@gmail.com>

	* Main.cs: Расширение функционала - может обрабатывать
	  несколько файлов, принимает аргументы --n=X --top=X,
	  контролирующие длину n-грам и количество выводимых.

	* Profiler.cs: 

2014-03-13  eig  <eig114@gmail.com>

	* Profiler.cs: Функции для вычисления расстояний между
	  профилями

	* NGrams.csproj:
	* NgramGetter.cs: 

2014-02-13  eig  <eig114@gmail.com>

	* Main.cs: