@@ -45,9 +45,10 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Extensions\IDictionaryExtensions.cs" />
     <Compile Include="Extensions\ICollectionExtensions.cs" />
-    <Compile Include="ProfileExtensions.cs" />
     <Compile Include="Profiles\IProfile.cs" />
     <Compile Include="Profiles\NgramProfile.cs" />
+    <Compile Include="Profiles\WordLengthProfile.cs" />
+    <Compile Include="ProfileExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
