@@ -1,3 +1,13 @@
+2014-06-13  eig  <eig114@gmail.com>
+
+	* Main.cs: Очистка от старого параметра --top, добавление
+	  профилирования по длине слова.
+
+	* NGrams.csproj: 
+
+	* ProfileExtensions.cs: Обобщение определения расстояний для
+	  профилей IProfile
+
 2014-06-05  eig  <eig114@gmail.com>
 
 	* Main.cs: Упорядочивание вывода по шансу совпадения
